# emvb

./: .gitignore  .gitmodules  CMakeLists.txt  ConvertFaissIndex.ipynb  README.md  compute_mrr.py  evaluate_lotte_rankings.py  results_lotte.sh  results_msmarco.sh
aux_data/lotte/: lotte_pooled_qas.search.jsonl  queries_id_lotte.tsv
aux_data/msmarco/: qrels.dev.tsv  queries_dev_small_idonly.tsv
include/: DocumentScorer.hpp  Heap.hpp  ProductQuantizerX.hpp  types.hpp  utils.cpp
src/: perf_emvb.cpp
